crates/forge_domain/src/snapshots/forge_domain__tool_result__tests__display_full.snap
---
source: crates/forge_domain/src/tool_result.rs
expression: result.to_string()
---
---
name: complex_tool
call_id: 123
status: success
---
{"address":[{"city":"New York"},{"city":"Los Angeles"}],"age":42,"user":"John Doe"}
