crates/forge_domain/src/snapshots/forge_domain__tool_result__tests__display_minimal.snap
---
source: crates/forge_domain/src/tool_result.rs
expression: result.to_string()
---
---
name: test_tool
call_id: null
status: success
---
