crates/forge_domain/src/snapshots/forge_domain__tool_result__tests__display_special_chars.snap
---
source: crates/forge_domain/src/tool_result.rs
expression: result.to_string()
---
---
name: xml_tool
call_id: null
status: success
---
{"nested":{"html":"<div>Test</div>"},"text":"Special chars: < > & ' \""}
