crates/forge_domain/src/snapshots/forge_domain__tool_result__tests__snapshot_full.snap
---
source: crates/forge_domain/src/tool_result.rs
expression: result
---
---
name: complex_tool
call_id: 123
status: error
---

ERROR:
Caused by: {"key":"value","number":42}
