crates/forge_domain/src/snapshots/forge_domain__tool_result__tests__snapshot_minimal.snap
---
source: crates/forge_domain/src/tool_result.rs
expression: result
---
---
name: test_tool
call_id: null
status: success
---
