crates/forge_domain/src/snapshots/forge_domain__tool_result__tests__snapshot_with_special_chars.snap
---
source: crates/forge_domain/src/tool_result.rs
expression: result
---
---
name: xml_tool
call_id: null
status: success
---
{"nested":{"html":"<div>Test</div>"},"text":"Special chars: < > & ' \""}
